<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Stone3Putty</string>
    <string name="start">START GAME</string>
    <string name="settings">SETTINGS</string>
    <string name="about">ABOUT</string>
    <string name="exit">EXIT</string>
    <string name="customise">CUSTOMISE</string>
    <string name="hello_world">Hello world!</string>
    <string name="menu_settings">Settings</string>
    <string name="title_activity_game">GameActivity</string>
    <string name="title_activity_settings">SettingsActivity</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="action_settings">Settings</string>
    <string name="sound">SOUND</string>
    <string name="music">MUSIC</string>
    <string name="vibrate">VIBRATE</string>
    <string name="enabled">ENABLED</string>
    <string name="disabled">DISABLED</string>
    <string name="title_activity_customise">CustomiseActivity</string>
    <string name="customise_your_pug">CUSTOMISE YOUR PUG!</string>
</resources>