<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    tools:context=".MainActivity" >

    <ImageView
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:src="@drawable/pugback" />

    <LinearLayout
        android:id="@+id/fullscreen_content_controls"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_margin="10dp"
        android:orientation="vertical" >

        <TextView
            android:id="@+id/start"
            style="@style/MenuFont"
            android:layout_gravity="right"
            android:text="@string/start" />

        <TextView
            android:id="@+id/customise"
            style="@style/MenuFont"
            android:text="@string/customise" />

        <TextView
            android:id="@+id/settings"
            style="@style/MenuFont"
            android:text="@string/settings" />

        <TextView
            android:id="@+id/about"
            style="@style/MenuFont"
            android:text="@string/about" />

        <TextView
            android:id="@+id/exit"
            style="@style/MenuFont"
            android:text="@string/exit" />
    </LinearLayout>

</RelativeLayout>