<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:background="@color/solid_background"
    tools:context=".SettingsActivity" >

    <TextView
        android:id="@+id/settingsHeader"
        style="@style/HeaderFont"
        android:text="@string/settings" />

    <GridLayout
        android:layout_width="match_parent"
	    android:layout_height="wrap_content"
	    android:columnCount="2"
	    android:rowCount="3"
        android:layout_marginTop="20dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp">
        
        <TextView
            android:id="@+id/soundLabel"
            style="@style/SubMenuFont"
            android:text="@string/sound" />
        
        <ToggleButton
            android:id="@+id/soundToggleButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textOff="@string/disabled"
            android:textOn="@string/enabled"
            android:layout_gravity="right" />
        
        <TextView
            android:id="@+id/musicLabel"
            style="@style/SubMenuFont"
            android:text="@string/music" />
        
        <ToggleButton
            android:id="@+id/musicToggleButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textOff="@string/disabled"
            android:textOn="@string/enabled"
            android:layout_gravity="right" />
        
        <TextView
            android:id="@+id/vibrateLabel"
            style="@style/SubMenuFont"
            android:text="@string/vibrate" />
        
        <ToggleButton
            android:id="@+id/vibrateToggleButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textOff="@string/disabled"
            android:textOn="@string/enabled"
            android:layout_gravity="right" />
    </GridLayout>

</LinearLayout>